.provarCaches/00D410000011HE0EAM/objects/rstk__syitem__c.object
<CustomObject>
    <description>syitem__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_comcod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>commodity code</label>
        <referenceTo>rstk__pocomcod__c</referenceTo>
        <relationshipLabel>SYITEMs</relationshipLabel>
        <relationshipName>SYITEMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divsyitems</relationshipLabel>
        <relationshipName>divsyitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_longdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syitem_type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>item type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SYITEM</label>
    <nameField>
        <label>SYITEM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYITEMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>